# sourceCode/GiamSat.API/GiamSat.APIClient/ApiClient/swagger.json
@@ -3490,6 +3490,13 @@
           "email": {
             "type": "string",
             "nullable": true
+          },
+          "roles": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
