# sourceCode/GiamSat.API/GiamSat.Models/UserModel.cs
@@ -11,5 +11,6 @@ namespace GiamSat.Models
         public string Id { get; set; }
         public string UserName { get; set; }
         public string Email { get; set; }
+        public List<string> Roles { get; set; } = new List<string>();
     }
 }
